--- a/css/promociones.css
+++ b/css/promociones.css
@@ -9,7 +9,7 @@
 
 body {
     margin: 0px;
-    font-family: 'Fresca';
+    font-family: 'Cuprum';
     padding: 0px;
     line-height: 1.6;
     background-color: #fefefe;
@@ -17,7 +17,7 @@ body {
     overflow-x: hidden;
 }
 
-.encabezado {
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -51,6 +51,7 @@ body {
 }
 
 .nav-link {
+    font-size: 20px;
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -65,8 +66,8 @@ body {
 
 .telefono {
     font-weight: bold;
-    font-family: "Coda";
-    font-size: 25px;
+    font-family: "Cuprum";
+    font-size: 30px;
     padding-left: 16px;
     margin-left: 16px;
     border-left: 2px solid white;
@@ -75,13 +76,16 @@ body {
 /* Botones */
 .reserva,
 .ordenar {
-    font-family: 'Coda';
+    font-family: 'Fresca';
     font-weight: bold;
+    font-size: 20px;
     background-color: #fcd200;
+    color:#0d0000;
     border: none;
     padding: 8px 16px;
     cursor: pointer;
     border-radius: 10px;
+    text-decoration: none;
 }
 
 .reserva:hover,
@@ -89,8 +93,6 @@ body {
     color: white;
     background-color: #121211;
 }
-
-
 /* MENÚ HAMBURGUESA */
 .menu-toggle {
     display: none;
