--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Coda:wght@400;800&family=Cuprum:ital,wght@0,400..700;1,400..700&family=Fresca&family=Happy+Monkey&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Arbutus&family=Coda:wght@400;800&family=Cuprum:ital,wght@0,400..700;1,400..700&family=Fresca&family=Happy+Monkey&family=Meow+Script&display=swap');
 
 
 /* estilo de todo*/
