--- a/css/promociones.css
+++ b/css/promociones.css
@@ -155,7 +155,6 @@ body {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
-
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 16px;
@@ -490,4 +489,33 @@ footer {
         height: auto;
       }
 
+}
+
+/*Carrito*/
+#cuenta-carrito {
+    position: absolute;
+    right: 20px;
+    top: 35px;
+    background-color: #ff4d4f;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    min-width: 20px;
+    text-align: center;
+    line-height: 1.2;
+    z-index: 10;
+
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Cuprum', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.6;
+    background-color: #e2ddcb;
+    color: #222;
+    overflow-x: hidden;
 }
