--- a/css/promociones.css
+++ b/css/promociones.css
@@ -80,7 +80,7 @@ body {
     font-weight: bold;
     font-size: 20px;
     background-color: #fcd200;
-    color:#0d0000;
+    color: #0d0000;
     border: none;
     padding: 8px 16px;
     cursor: pointer;
@@ -93,6 +93,7 @@ body {
     color: white;
     background-color: #121211;
 }
+
 /* MENÚ HAMBURGUESA */
 .menu-toggle {
     display: none;
@@ -163,16 +164,29 @@ body {
 }
 
 .promo-card {
+    margin: 0 auto;
+    /* ⬅️ Esto la centra si está sola */
+
+    display: flex;
+    flex-direction: row;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
     overflow: hidden;
     width: calc(50% - 20px);
     min-width: 450px;
     max-width: 600px;
     height: 180px;
+}
+
+.promo-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 15px;
+    flex: 1;
+    height: 100%;
+    /* Hace que tome la altura de la tarjeta */
 }
 
 .promo-card img {
@@ -181,14 +195,6 @@ body {
     object-fit: cover;
 }
 
-.promo-content {
-    font-family: 'Cuprum';
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex: 1;
-}
 
 .promo-titulo {
     font-weight: bold;
@@ -200,13 +206,14 @@ body {
     color: #111010;
     font-weight: bold;
     float: right;
-    font-size:x-large;
+    font-size: x-large;
 }
 
 .promo-description {
-    margin: 10px 0;
-    font-size: 0.95rem;
+    font-size: 14px;
+    color: #333;
 }
+
 
 .promo-actions {
     display: flex;
@@ -229,18 +236,21 @@ body {
 }
 
 .promo-actions button:hover {
-    background: #b71d1d; /* tono más oscuro */
-    transform: translateY(-2px); /* pequeño levantamiento */
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* sombra bonita */
+    background: #b71d1d;
+    /* tono más oscuro */
+    transform: translateY(-2px);
+    /* pequeño levantamiento */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    /* sombra bonita */
 }
 
- .promo-actions button span {
-      order: 1;
-    }
+.promo-actions button span {
+    order: 1;
+}
 
-    .promo-actions button i {
-      order: 2;
-    }
+.promo-actions button i {
+    order: 2;
+}
 
 .promo-actions a {
     font-size: 0.8rem;
@@ -480,21 +490,22 @@ footer {
 
 /*responsividad para la seccion promociones*/
 @media (max-width: 1000px) {
-   .container {
+    .container {
         padding: 0 16px;
-      }
+    }
 
-      .promo-card {
+    .promo-card {
         width: 100%;
         margin: 0 auto;
-        flex-direction: row; /* Mantener imagen al costado */
+        flex-direction: row;
+        /* Mantener imagen al costado */
         height: auto;
-      }
+    }
 
-      .promo-card img {
+    .promo-card img {
         width: 150px;
         height: auto;
-      }
+    }
 
 }
 
