--- a/css/cart.css
+++ b/css/cart.css
@@ -163,11 +163,12 @@ body {
 }
 
 .promo-card {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
     overflow: hidden;
     width: calc(50% - 20px);
     min-width: 450px;
