--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,7 @@ body {
 /* estilo para botones de reserva y orden */
 .reserva,
 .ordenar {
+    
     font-family: 'Fresca';
     font-weight: bold;
     font-size: 20px;
@@ -110,6 +111,7 @@ body {
     color: white;
     background-color: #121211;
 }
+
 
 /*estilos para el carrusel*/
 .carrusel {
@@ -712,5 +714,21 @@ footer {
         text-align: center;
         padding: 15px 20px;
     }
+
+}
+#cuenta-carrito {
+    position: absolute;
+    right: 20px;
+    top: 35px;
+    background-color: #ff4d4f;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    min-width: 20px;
+    text-align: center;
+    z-index: 10;
 
 }
